--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
-  "name": "ionic",
-  "version": "1.0.0",
-  "description": "ionic: An Ionic project",
+  "name": "appistack_ionic",
+  "title": "Appistack",
+  "version": "0.0.1",
+  "description": "Appistack Ionic Template",
+  "private": true,
+  "author": {
+    "name": "David Conner",
+    "company": "Appistack"
+  },
   "dependencies": {
     "gulp": "^3.5.6",
-    "gulp-sass": "^1.3.3",
-    "gulp-concat": "^2.2.0",
+    "gulp-concat": "^2.6.0",
     "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
+    "gulp-ng-constant": "^0.3.0",
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^1.3.3",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "bower": "^1.3.3",
