--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "ionic": "driftyco/ionic-bower#1.0.1",
     "ng-token-auth": "~0.0.27",
     "restangular": "~1.5.1",
-    "angular-cookie": "~4.0.9"
+    "angular-cookie": "~4.0.9",
+    "underscore": "~1.8.3"
   }
 }
